--- a/main.Rmd
+++ b/main.Rmd
@@ -3,9 +3,9 @@ title: "MATH 284/FMPH 291 Survival Analysis  Supplementary Learing Materials"
 author: "Yuyao Wang"
 date: "`r Sys.Date()`"
 output:
-  pdf_document: default
   html_document:
     df_print: paged
+  pdf_document: default
 ---
 
 ```{r setup, include=FALSE}
@@ -82,7 +82,7 @@ When we focus on estimating $T$ distribution, $T$ is censored by $C$, we constru
 
 The location-scale parameterization of a Weibull distribution found in `survreg` is not the same as the parameterization of rweibull. See the Example for `survreg()` and the chunk for `survreg.distributions` in ‘\texttt{survival}’ R package documentation for more details on how to interpret the outputs.
 
-When fitting an exponential model using `fit = survreg(..., dist = "exponential")`, `1/exp(fit$icoef)` is the `rexp` rate parameter. Try the exmaple below.
+When fitting an exponential model using `fit = survreg(..., dist = "exponential")`, `1/exp(fit$icoef)` correspond to the rate parameter in `rexp()`. Try the example below.
 
 ```{r r_survreg_exp}
 n=10000
